--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,8 @@
   "main": "src/server.js",
   "scripts": {
     "start": "node src/server.js",
-    "dev": "nodemon src/server.js"
+    "dev": "nodemon src/server.js",
+    "test": "echo \"No server tests yet\" && exit 0"
   },
   "keywords": [
     "network-game-show",
