Fix github pages bug

--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -17,6 +17,9 @@ concurrency:
 jobs:
   build:
     runs-on: ubuntu-latest
+    env:
+      # Override with repo/org variable VITE_BASE_PATH for custom domains (e.g., "/")
+      VITE_BASE_PATH: ${{ vars.VITE_BASE_PATH != '' && vars.VITE_BASE_PATH || '/NetworkGameShow/' }}
     defaults:
       run:
         working-directory: client
